--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: growthproai-frontend
     env: static
-    buildCommand: npm install && chmod +x node_modules/.bin/react-scripts && npm run build
+    buildCommand: npm install && NODE_ENV=production npm run build
     staticPublishPath: ./build
     envVars:
       - key: REACT_APP_API_URL
