--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       - key: REACT_APP_API_URL
         value: https://growthproai-backendpart.onrender.com
       - key: NODE_VERSION
-        value: 18.x
+        value: 22.14.0
     headers:
       - path: /*
         name: Cache-Control
