--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: growthproai-bpart2
+    name: growthproai-backend
     env: node
     buildCommand: npm install
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
-        value: 22.14.0
+        value: "22.14.0"
