--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: growthproai-backend-2025
+    name: growthproai-backend-01
     env: node
     buildCommand: npm install
     startCommand: npm start
