--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: growthproai-frontend-2025
+    name: growthproai-frontend-01
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./build
