--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,9 +1,13 @@
 services:
   - type: web
-    name: growthproai-backend-04
+    name: growthproai-backend-05
     env: node
     buildCommand: npm install
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
         value: "22.14.0"
+      - key: PORT
+        value: "5000"
+      - key: CORS_ORIGINS
+        value: "https://growthproai-frontend-05.onrender.com,http://localhost:3000"
